include/electionguard/ballot.h

/**
* A BallotSelection represents an individual selection on a ballot.
*
* This class accepts a `vote` string field which has no constraints
* in the ElectionGuard Data Specification, but is constrained logically
* in the application to resolve to `True` or `False`.  This implies that the
* data specification supports passing any string that can be represented as
* an integer, however only 0 and 1 is supported for now.
*
* This class can also be designated as `is_placeholder_selection` which has no
* context to the data specification but is useful for running validity checks internally
*
* an `extended_data` field exists to support any arbitrary data to be associated
* with the selection.  In practice, this field is the cleartext representation
* of a write-in candidate value.  In the current implementation these values are
* discarded when encrypting.
*/
typedef struct eg_plaintext_ballot_selection_s eg_plaintext_ballot_selection_t;
EG_API eg_electionguard_status_t eg_plaintext_ballot_selection_new(
  const char *in_object_id, const uint64_t in_vote, bool in_is_placeholder_selection,
  eg_plaintext_ballot_selection_t **out_handle);
EG_API eg_electionguard_status_t eg_plaintext_ballot_selection_new_with_extended_data(
  const char *in_object_id, const uint64_t in_vote, bool in_is_placeholder_selection,
  const char *in_extended_data_value, uint64_t in_extended_data_length,
  eg_plaintext_ballot_selection_t **out_handle);
/**
* A CiphertextBallotSelection represents an individual encrypted selection on a ballot.
*
* This class accepts a `description_hash` and a `ciphertext` as required parameters
* in its constructor.
*
* When a selection is encrypted, the `description_hash` and `ciphertext` required fields must
* be populated at construction however the `nonce` is also usually provided by convention.
*
* After construction, the `crypto_hash` field is populated automatically in the `__post_init__` cycle
*
* A consumer of this object has the option to discard the `nonce` and/or discard the `proof`,
* or keep both values.
*
* By discarding the `nonce`, the encrypted representation and `proof`
* can only be regenerated if the nonce was derived from the ballot's seed nonce.  If the nonce
* used for this selection is truly random, and it is discarded, then the proofs cannot be regenerated.
*
* By keeping the `nonce`, or deriving the selection nonce from the ballot nonce, an external system can
* regenerate the proofs on demand.  This is useful for storage or memory constrained systems.
*
* By keeping the `proof` the nonce is not required fotor verify the encrypted selection.
*/
typedef struct eg_ciphertext_ballot_selection_s eg_ciphertext_ballot_selection_t;
/**
 * A PlaintextBallotContest represents the selections made by a voter for a specific ContestDescription
 *
 * This class can be either a partial or a complete representation of a contest dataset.  Specifically,
 * a partial representation must include at a minimum the "affirmative" selections of a contest.
 * A complete representation of a ballot must include both affirmative and negative selections of
 * the contest, AND the placeholder selections necessary to satisfy the ConstantChaumPedersen proof
 * in the CiphertextBallotContest.
 *
 * Typically partial contests may be passed into Electionguard for memory constrained systems,
 * while complete contests are passed into ElectionGuard when running encryption on an existing dataset.
 */
typedef struct eg_plaintext_ballot_contest_s eg_plaintext_ballot_contest_t;
EG_API eg_electionguard_status_t eg_plaintext_ballot_contest_new(
  char *object_id, eg_plaintext_ballot_selection_t *in_selections[],
  const uint64_t in_selections_size, eg_plaintext_ballot_contest_t **out_handle);
/**
 * A CiphertextBallotContest represents the selections made by a voter for a specific ContestDescription
 *
 * CiphertextBallotContest can only be a complete representation of a contest dataset.  While
 * PlaintextBallotContest supports a partial representation, a CiphertextBallotContest includes all data
 * necessary for a verifier to verify the contest.  Specifically, it includes both explicit affirmative
 * and negative selections of the contest, as well as the placeholder selections that satisfy
 * the ConstantChaumPedersen proof.
 *
 * Similar to `CiphertextBallotSelection` the consuming application can choose to discard or keep both
 * the `nonce` and the `proof` in some circumstances.  For deterministic nonce's derived from the
 * seed nonce, both values can be regenerated.  If the `nonce` for this contest is completely random,
 * then it is required in order to regenerate the proof.
 */
typedef struct eg_ciphertext_ballot_contest_s eg_ciphertext_ballot_contest_t;
// no constructors defined.  use `eg_encrypt_contest` in encrypt.h

/**
 * Get a selection at a specific index.
 * 
 * @param[in] in_index The index of the selection
 * @param[out] out_selection_ref An opaque pointer to the selection.  
 *                               The value is a reference and is not owned by the caller
 */
EG_API eg_electionguard_status_t eg_ciphertext_ballot_contest_get_selection_at_index(
  eg_ciphertext_ballot_contest_t *handle, uint64_t in_index,
  eg_ciphertext_ballot_selection_t **out_selection_ref);
/**
 * The encrypted representation of all of the vote fields (the contest total)
 * 
 * @param[out] out_ciphertext_accumulation_ref An opaque pointer to the ElGamalCiphertext accumulation.  
 *                                             The value is a reference and is not owned by the caller
 */
EG_API eg_electionguard_status_t eg_ciphertext_ballot_contest_get_ciphertext_accumulation(
  eg_ciphertext_ballot_contest_t *handle,
  eg_elgamal_ciphertext_t **out_ciphertext_accumulation_ref);
/**
 * Given an encrypted Ballotcontest, generates a hash, suitable for rolling up
 * into a hash / tracking code for an entire ballot. Of note, this particular hash examines
 * the `encryptionSeed` and `ballot_selections`, but not the proof.
 * This is deliberate, allowing for the possibility of ElectionGuard variants running on
 * much more limited hardware, wherein the Constant Chaum-Pedersen proofs might be computed
 * later on.
 * 
 * @param[in] in_encryption_seed In most cases the encryption_seed should match the `description_hash`
 * @param[out] out_crypto_hash An opaque pointer to the nonce.  
 *                             The caller is responsible for lifecycle.
 */
EG_API eg_electionguard_status_t eg_ciphertext_ballot_contest_crypto_hash_with(
  eg_ciphertext_ballot_selection_t *handle, eg_element_mod_q_t *in_encryption_seed,
  eg_element_mod_q_t **out_crypto_hash);
// TODO: eg_ciphertext_ballot_contest_make

/**
 * An aggregate nonce for the contest composed of the nonces of the selections.
 * Used when constructing the proof of selection limit.
 * 
 * Sensitive & should be treated as a secret
 * 
 * @param[out] out_nonce_ref An opaque pointer to the ElementModQ nonce.  
 *                           The caller is responsible for the object lifecycle.
 */
EG_API eg_electionguard_status_t eg_ciphertext_ballot_contest_aggregate_nonce(
  eg_ciphertext_ballot_selection_t *handle, eg_element_mod_q_t **out_aggregate_nonce);
/**
 * Add the individual ballot_selections `message` fields together, suitable for use
 * when constructing the proof of selection limit.
 * 
 * @param[out] out_ciphertext_accumulation An opaque pointer to the ElGamalCiphertext accumulation.
 *                                         The caller is responsible for the object lifecycle.
 */
EG_API eg_electionguard_status_t eg_ciphertext_ballot_contest_elgamal_accumulate(
  eg_ciphertext_ballot_selection_t *handle, eg_elgamal_ciphertext_t **out_ciphertext_accumulation);
/**
 * Given an encrypted BallotContest, validates the encryption state against a specific seed hash and public key
 * by verifying the accumulated sum of selections match the proof.
 * Calling this function expects that the object is in a well-formed encrypted state
 * with the `ballot_selections` populated with valid encrypted ballot selections,
 * the ElementModQ `description_hash`, the ElementModQ `crypto_hash`,
 * and the ConstantChaumPedersenProof all populated.
 * Specifically, the seed hash in this context is the hash of the ContestDescription,
 * or whatever `ElementModQ` was used to populate the `description_hash` field.
 */
EG_API bool eg_ciphertext_ballot_contest_is_valid_encryption(
  eg_ciphertext_ballot_contest_t *handle, eg_element_mod_q_t *in_encryption_seed,
  eg_element_mod_p_t *in_public_key, eg_element_mod_q_t *in_crypto_extended_base_hash);
/**
 * A PlaintextBallot represents a voters selections for a given ballot and ballot style.
 *
 * This class can be either a partial or a complete representation of the expected values of a ballot dataset.
 * Specifically, a partial representation must include at a minimum the "affirmative" selections
 * of every contest where a selection is made.  A partial representation may exclude contests for which
 * no selection is made.
 *
 * A complete representation of a ballot must include both affirmative and negative selections of
 * every contest, AND the placeholder selections necessary to satisfy the NIZKPs for each contest and selection.
 */
typedef struct eg_plaintext_ballot_s eg_plaintext_ballot_t;
EG_API eg_electionguard_status_t eg_plaintext_ballot_new(
  char *in_object_id, char *in_style_id, eg_plaintext_ballot_contest_t *in_contests[],
  const uint64_t in_contests_size, eg_plaintext_ballot_t **out_handle);
/**
 * Import the ballot representation from JSON
 */
EG_API eg_electionguard_status_t eg_plaintext_ballot_from_json(char *in_data,
                                                               eg_plaintext_ballot_t **out_handle);
/**
 * Import the ballot representation from BSON
 */
EG_API eg_electionguard_status_t eg_plaintext_ballot_from_bson(uint8_t *in_data, uint64_t in_length,
                                                               eg_plaintext_ballot_t **out_handle);
/**
 * Import the ballot representation from MsgPack
 */
EG_API eg_electionguard_status_t eg_plaintext_ballot_from_msgpack(
  uint8_t *in_data, uint64_t in_length, eg_plaintext_ballot_t **out_handle);
/**
 * A CiphertextBallot represents a voters encrypted selections for a given ballot and ballot style.
 *
 * When a ballot is in it's complete, encrypted state, the `nonce` is the seed nonce
 * from which all other nonces can be derived to encrypt the ballot.  Allong with the `nonce`
 * fields on `Ballotcontest` and `BallotSelection`, this value is sensitive.
 *
 * Don't make this directly. Use `make_ciphertext_ballot` instead, or call `eg_encrypt_ballot` in encrypt.h.
 */
typedef struct eg_ciphertext_ballot_s eg_ciphertext_ballot_t;
/**
 * The hash of the encrypted values on this ballot in sequence order
 * 
 * @param[out] out_hash_ref An opaque pointer to the crypto hash.  
 *                          The value is a reference and is not owned by the caller
 */
EG_API eg_electionguard_status_t eg_ciphertext_ballot_get_crypto_hash(
  eg_ciphertext_ballot_t *handle, eg_element_mod_q_t **out_hash_ref);
/**
 * Given an encrypted Ballot, generates a hash, suitable for rolling up
 * into a hash for an entire ballot / ballot code. Of note, this particular hash examines
 * the `manifest_hash` and `ballot_selections`, but not the proof.
 * This is deliberate, allowing for the possibility of ElectionGuard variants running on
 * much more limited hardware, wherein the Disjunctive Chaum-Pedersen proofs might be computed
 * later on.
 * 
 * @param[in] in_manifest_hash The manifest hash
 * @param[out] out_crypto_hash An opaque pointer to the crypto hash.  
 *                          The caller is responsible for object lifecycle
 */
EG_API eg_electionguard_status_t eg_ciphertext_ballot_crypto_hash_with(
  eg_ciphertext_ballot_t *handle, eg_element_mod_q_t *in_manifest_hash,
  eg_element_mod_q_t **out_crypto_hash);