bindings/netstandard/ElectionGuard/ElectionGuard.Encryption/NativeInterface.cs


        internal static class PlaintextBallotSelection
        {
            [DllImport(DllName, EntryPoint = "eg_plaintext_ballot_selection_new",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status New(
                [MarshalAs(UnmanagedType.LPStr)] string objectId,
                ulong vote,
                bool isPlaceholderSelection,
                out ElectionGuard.PlaintextBallotSelection.External.PlaintextBallotSelectionHandle handle);

            [DllImport(DllName,
                EntryPoint = "eg_plaintext_ballot_selection_new_with_extended_data",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status New(
                [MarshalAs(UnmanagedType.LPStr)] string objectId,
                ulong vote,
                bool isPlaceholderSelection,
                [MarshalAs(UnmanagedType.LPStr)] string extendedData,
                ulong extendedDataLength,
                out ElectionGuard.PlaintextBallotSelection.External.PlaintextBallotSelectionHandle handle);
        }

        internal static class PlaintextBallotContest
        {
            [DllImport(DllName, EntryPoint = "eg_plaintext_ballot_contest_new",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status New(
                [MarshalAs(UnmanagedType.LPStr)] string objectId,
                // TODO: type safety
                [MarshalAs(UnmanagedType.LPArray)] IntPtr[] selections,
                ulong selectionsSize,
                out ElectionGuard.PlaintextBallotContest.External.PlaintextBallotContestHandle handle);
        }

        internal static class CiphertextBallotContest
        {
            [DllImport(DllName,
                EntryPoint = "eg_ciphertext_ballot_contest_get_selection_at_index",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetSelectionAtIndex(
                ElectionGuard.CiphertextBallotContest.External.CiphertextBallotContestHandle handle,
                ulong index,
                out CiphertextBallotSelection.External.CiphertextBallotSelectionHandle selection);

            [DllImport(DllName,
                EntryPoint = "eg_ciphertext_ballot_contest_get_ciphertext_accumulation",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetCiphertextAccumulation(
                ElectionGuard.CiphertextBallotContest.External.CiphertextBallotContestHandle handle,
                out ElGamalCiphertext.ElGamalCiphertextHandle nonce);

            [DllImport(DllName,
                EntryPoint = "eg_ciphertext_ballot_contest_get_proof",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetProof(
                ElectionGuard.CiphertextBallotContest.External.CiphertextBallotContestHandle handle,
                out RangedChaumPedersenProof.RangedChaumPedersenProofHandle nonce);

            [DllImport(DllName,
                EntryPoint = "eg_ciphertext_ballot_contest_crypto_hash_with",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status CryptoHashWith(
                ElectionGuard.CiphertextBallotContest.External.CiphertextBallotContestHandle handle,
                ElementModQ.ElementModQHandle encryption_seed,
                out ElementModQ.ElementModQHandle crypto_hash);

            [DllImport(DllName,
                EntryPoint = "eg_ciphertext_ballot_contest_contest_nonce",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status ContestNonce(
                CiphertextElectionContext.CiphertextElectionContextHandle handle,
                ulong sequence_order,
                ElementModQ.ElementModQHandle nonce_seed,
                out ElementModQ.ElementModQHandle contest_nonce);

            [DllImport(DllName,
                EntryPoint = "eg_ciphertext_ballot_contest_get_extended_data",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetExtendedData(
                ElectionGuard.CiphertextBallotContest.External.CiphertextBallotContestHandle handle,
                out HashedElGamalCiphertext.HashedElGamalCiphertextHandle extendedData);

            [DllImport(DllName,
                EntryPoint = "eg_ciphertext_ballot_contest_aggregate_nonce",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status AggregateNonce(
                ElectionGuard.CiphertextBallotContest.External.CiphertextBallotContestHandle handle,
                out ElementModQ.ElementModQHandle aggregate_nonce);

            [DllImport(DllName,
                EntryPoint = "eg_ciphertext_ballot_contest_elgamal_accumulate",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status ElGamalAccumulate(
                ElectionGuard.CiphertextBallotContest.External.CiphertextBallotContestHandle handle,
                out ElGamalCiphertext.ElGamalCiphertextHandle ciphertext_accumulation);

            [DllImport(DllName,
                EntryPoint = "eg_ciphertext_ballot_contest_is_valid_encryption",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern bool IsValidEncryption(
                ElectionGuard.CiphertextBallotContest.External.CiphertextBallotContestHandle handle,
                ElementModQ.ElementModQHandle encryption_seed,
                ElementModP.ElementModPHandle public_key,
                ElementModQ.ElementModQHandle crypto_extended_base_hash);
        }

        internal static class PlaintextBallot
        {
            internal struct PlaintextBallotType { };

            [DllImport(DllName,
                EntryPoint = "eg_plaintext_ballot_new",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status New(
                [MarshalAs(UnmanagedType.LPStr)] string objectId,
                [MarshalAs(UnmanagedType.LPStr)] string styleId,
                // TODO: type safety
                [MarshalAs(UnmanagedType.LPArray)] IntPtr[] contests,
                ulong contestsSize,
                out ElectionGuard.PlaintextBallot.External.PlaintextBallotHandle handle);

            [DllImport(DllName, EntryPoint = "eg_plaintext_ballot_from_json",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status FromJson(
                [MarshalAs(UnmanagedType.LPStr)] string data,
                out ElectionGuard.PlaintextBallot.External.PlaintextBallotHandle handle);

            [DllImport(DllName, EntryPoint = "eg_plaintext_ballot_from_bson",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status FromBson(
                byte* data, ulong length, out ElectionGuard.PlaintextBallot.External.PlaintextBallotHandle handle);

            [DllImport(DllName, EntryPoint = "eg_plaintext_ballot_from_msgpack",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status FromMsgPack(
                byte* data, ulong length, out ElectionGuard.PlaintextBallot.External.PlaintextBallotHandle handle);

            // TODO: implement MsgPackFree
        }

        internal static class CompactPlaintextBallot
        {
            internal struct CompactPlaintextBallotType { };

            internal class CompactPlaintextBallotHandle
                : ElectionGuardSafeHandle<CompactPlaintextBallotType>
            {
#if NETSTANDARD
                [ReliabilityContract(Consistency.WillNotCorruptState, Cer.MayFail)]
#endif
                protected override bool Free()
                {
                    if (IsClosed) return true;

                    var status = CompactPlaintextBallot.Free(TypedPtr);
                    if (status != Status.ELECTIONGUARD_STATUS_SUCCESS)
                    {
                        throw new ElectionGuardException($"CompactPlaintextBallot Error Free: {status}", status);
                    }
                    return true;
                }
            }

            [DllImport(DllName, EntryPoint = "eg_compact_plaintext_ballot_free",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status Free(CompactPlaintextBallotType* handle);

            [DllImport(DllName, EntryPoint = "eg_compact_plaintext_ballot_from_msgpack",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status FromMsgPack(
                byte* data, ulong size, out CompactPlaintextBallotHandle handle);

            [DllImport(DllName, EntryPoint = "eg_compact_plaintext_ballot_to_msgpack",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status ToMsgPack(
                CompactPlaintextBallotHandle handle, out IntPtr data, out ulong size);
        }

        internal static class CiphertextBallot
        {
            [DllImport(DllName,
                EntryPoint = "eg_ciphertext_ballot_get_state",
                CallingConvention = CallingConvention.Cdecl,
                SetLastError = true)]
            internal static extern BallotBoxState GetState(
                ElectionGuard.CiphertextBallot.External.CiphertextBallotHandle handle);

            [DllImport(DllName, EntryPoint = "eg_ciphertext_ballot_get_crypto_hash",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetCryptoHash(
                ElectionGuard.CiphertextBallot.External.CiphertextBallotHandle handle,
                out ElementModQ.ElementModQHandle hash_ref);

            [DllImport(DllName, EntryPoint = "eg_ciphertext_ballot_crypto_hash_with",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status CryptoHashWith(
                ElectionGuard.CiphertextBallot.External.CiphertextBallotHandle handle,
                ElementModQ.ElementModQHandle manifest_hash,
                out ElementModQ.ElementModQHandle crypto_hash);

            [DllImport(DllName, EntryPoint = "eg_ciphertext_ballot_nonce_seed",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status NonceSeed(
                ElementModQ.ElementModQHandle manifestHash,
                [MarshalAs(UnmanagedType.LPStr)] string objectId,
                ElementModQ.ElementModQHandle nonce,
                out ElementModQ.ElementModQHandle nonceSeed);

            [DllImport(DllName,
                EntryPoint = "eg_ciphertext_ballot_cast",
                CallingConvention = CallingConvention.Cdecl,
                SetLastError = true)]
            internal static extern Status Cast(
                ElectionGuard.CiphertextBallot.External.CiphertextBallotHandle handle);

            [DllImport(DllName,
                EntryPoint = "eg_ciphertext_ballot_spoil",
                CallingConvention = CallingConvention.Cdecl,
                SetLastError = true)]
            internal static extern Status Spoil(
                ElectionGuard.CiphertextBallot.External.CiphertextBallotHandle handle);
